--- a/HackVZ/.classpath
+++ b/HackVZ/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-api-client-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-http-client-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-http-client-gson-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-http-client-jackson2-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-http-client-jdo-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-oauth-client-1.20.0.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/jsr305-1.3.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
