--- a/HackVZ/.classpath
+++ b/HackVZ/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-http-client-jdo-1.20.0.jar"/>
 	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/google-oauth-client-1.20.0.jar"/>
 	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/mapsengine/libs/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="/Users/adityabindra/Downloads/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
